--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 *.pyc
-./Q2creating_customer_segments/*.pyc
-Q1finding_donors/P2.zip
-Q1finding_donors/report.html
+Q2/creating_customer_segments/*.pyc
+Q1/finding_donors/P2.zip
+Q1/finding_donors/report.html
+docs/
+books/
